fix spacing in popover

--- a/fractal-gtk/res/app.css
+++ b/fractal-gtk/res/app.css
@@ -150,7 +150,8 @@ row .timestamp {
 }
 
 .autocomplete row {
-  border-radius: 6px;
+  border-radius: 3px;
+  padding: 6px;
 }
 
 .invite-selected,
